--- a/frontend/src/components/PowerGraph/PowerGraph.css
+++ b/frontend/src/components/PowerGraph/PowerGraph.css
@@ -32,9 +32,11 @@
 }
 
 .power-graph-svg {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   display: block;
+  touch-action: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .hover-line {
