--- a/frontend/src/pages/CurrentPage/CurrentPage.css
+++ b/frontend/src/pages/CurrentPage/CurrentPage.css
@@ -1,10 +1,10 @@
-.energy-graph-container {
+.power-graph-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.energy-graph {
+.power-graph {
   width: 100%;
   display: flex;
   align-items: center;
@@ -12,6 +12,7 @@
   aspect-ratio: 800 / 750;
 }
 
+.graph-loading,
 .graph-empty {
   color: #888;
   font-size: 0.875rem;
