--- a/frontend/src/pages/MonthPage/MonthPage.css
+++ b/frontend/src/pages/MonthPage/MonthPage.css
@@ -1,1 +1,6 @@
-/* Month page specific styles can be added here */
+.month-page {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+}
