--- a/frontend/src/components/EnergyGraph/EnergyGraph.css
+++ b/frontend/src/components/EnergyGraph/EnergyGraph.css
@@ -31,6 +31,12 @@
   color: #f97316;
 }
 
+.energy-graph-wrapper .hover-yesterday {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #999;
+}
+
 .energy-graph-wrapper .hover-time {
   font-size: 0.875rem;
   color: #999;
